--- a/.env.example
+++ b/.env.example
@@ -10,10 +10,10 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_PORT=5432
+DB_DATABASE=postgres
+DB_USERNAME=postgres
+DB_PASSWORD=dbwt2
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
