--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.2",
+        "league/csv": "^9.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
