--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "cboden/ratchet": "^0.4.4",
         "doctrine/dbal": "^3.6",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
-        "league/csv": "^9.9"
+        "league/csv": "^9.9",
+        "ratchet/pawl": "^0.4.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
